--- a/landUse.html
+++ b/landUse.html
@@ -116,54 +116,56 @@
         <span class="english">The most significant change of land use occurs between 1953 and 2012 due to the construction of a water reservoir in the seventies. In these years, two settlements were completely destroyed (Přísečnice and Dolina) and one village (Rusová) had to give ground to the 1st protective zone of drinking water reservoir. Thus, a conversion of arable land to forests and permanent grassland can be identified. After filling the water reservoir, the total value of the water area in this region increased almost 28 times.</span>
         <span class="french"></span></p>
 
-        <table class="vyvoj">
-          <tr>
-            <th><span class="czech">Kategorie [ha]</span>
-              <span class="english">Category [ha]</span></th>
-            <th><span class="czech">Rok 1842</span>
-              <span class="english">Year 1842</span></th>
-            <th><span class="czech">Rok 1953</span>
-              <span class="english">Year 1953</span></th>
-            <th><span class="czech">Rok 2012</span>
-              <span class="english">Year 2012</span></th>
-          </tr>
-          <tr>
-            <td><span class="czech">Orná půda</span>
-              <span class="english">Arable land</span>
-            </td><td>874,5</td><td>920,1</td><td>0,7</td>
-          </tr>
-          <tr>
-            <td><span class="czech">Trvalé plochy</span>
-              <span class="english">Permanent cultures</span>
-            </td><td>1,7</td><td>0,7</td><td>7,5</td>
-          </tr>
-          <tr>
-            <td><span class="czech">Trvalý travní porost</span>
-              <span class="english">Permanent grassland</span>
-            </td><td>474,2</td><td>375,3</td><td>789,6</td>
-          </tr>
-          <tr>
-            <td><span class="czech">Lesní plochy</span>
-              <span class="english">Forested areas</span>
-            </td><td>1413,8</td><td>1446,8</td><td>1733,7</td>
-          </tr>
-          <tr>
-            <td><span class="czech">Vodní plochy</span>
-              <span class="english">Water areas</span>
-            </td><td>10,2</td><td>11,6</td><td>322,7</td>
-          </tr>
-          <tr>
-            <td><span class="czech">Zastavěné plochy</span>
-              <span class="english">Built-up areas</span>
-            </td><td>10,7</td><td>14,5</td><td>1,3</td>
-          </tr>
-          <tr>
-            <td>
-              <span class="czech">Ostatní plochy</span>
-              <span class="english">Other areas</span>
-            </td><td>88,5</td><td>10,4</td><td>18,1</td>
-          </tr>
-        </table>
+        <div class="table-responsive">
+          <table class="table">
+            <tr class="danger fr_line">
+              <th><span class="czech">Kategorie [ha]</span>
+                <span class="english">Category [ha]</span></th>
+              <th><span class="czech">Rok 1842</span>
+                <span class="english">Year 1842</span></th>
+              <th><span class="czech">Rok 1953</span>
+                <span class="english">Year 1953</span></th>
+              <th><span class="czech">Rok 2012</span>
+                <span class="english">Year 2012</span></th>
+            </tr>
+            <tr>
+              <td><span class="czech">Orná půda</span>
+                <span class="english">Arable land</span>
+              </td><td>874,5</td><td>920,1</td><td>0,7</td>
+            </tr>
+            <tr>
+              <td><span class="czech">Trvalé plochy</span>
+                <span class="english">Permanent cultures</span>
+              </td><td>1,7</td><td>0,7</td><td>7,5</td>
+            </tr>
+            <tr>
+              <td><span class="czech">Trvalý travní porost</span>
+                <span class="english">Permanent grassland</span>
+              </td><td>474,2</td><td>375,3</td><td>789,6</td>
+            </tr>
+            <tr>
+              <td><span class="czech">Lesní plochy</span>
+                <span class="english">Forested areas</span>
+              </td><td>1413,8</td><td>1446,8</td><td>1733,7</td>
+            </tr>
+            <tr>
+              <td><span class="czech">Vodní plochy</span>
+                <span class="english">Water areas</span>
+              </td><td>10,2</td><td>11,6</td><td>322,7</td>
+            </tr>
+            <tr>
+              <td><span class="czech">Zastavěné plochy</span>
+                <span class="english">Built-up areas</span>
+              </td><td>10,7</td><td>14,5</td><td>1,3</td>
+            </tr>
+            <tr>
+              <td>
+                <span class="czech">Ostatní plochy</span>
+                <span class="english">Other areas</span>
+              </td><td>88,5</td><td>10,4</td><td>18,1</td>
+            </tr>
+          </table>
+        </div>
 
         <p><span class="czech">Při porovnání roků 1842 a 1953 lze vidět nárůst orné půdy a zastavěných ploch. Naopak výrazně ubylo ostatních ploch, což může být následkem ukončení těžby kamene a rašeliny. Dále se snížila plocha trvalého travního porostu. Ten byl zřejmě nahrazen ornou půdou. I&nbsp;přes některé nárůsty a poklesy v&nbsp;kategoriích lze říci, že od roku 1842 do roku 1953 se krajina i využití téměř nezměnilo. Největší změnou byla výstavba nádrže na pitnou vodu, která zapříčinila místní prudký pokles obyvatel a změnila ráz krajiny.</span>
         <span class="english">In contrast, the extent of other areas significantly decreased which may be due to the termination of mining stone and peat. Permanent grassland was apparently replaced by arable land. Despite some increases and decreases in categories can be said that from 1842 to 1953, the landscape and its use almost unchanged. The biggest change was the construction of water dam which affected population and landscape of the region.</span>
